--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="margin_small">16dp</dimen>
     <dimen name="author_text_size">14sp</dimen>
     <dimen name="quote_text_size">18sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
