redesigned and added font size settings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkTextColor">#272424</color>
+
+    <color name="mainColor">#44C1B1</color>
+    <color name="mainColorNight">#0d2237</color>
 </resources>
