--- a/app/src/main/res/layout/appearance_settings_dialog.xml
+++ b/app/src/main/res/layout/appearance_settings_dialog.xml
@@ -22,6 +22,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="16dp"
         android:background="@color/white">
 
         <TextView
@@ -57,6 +58,35 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/quoteSizeSeekBar" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/quoteSizeSeekBar" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Font"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/quoteSizeSeekBar"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
+
+        <Spinner
+            android:id="@+id/fontSpinner"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:entries="@array/fonts"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="@+id/quoteSizeTextView"
+            app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
