--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -31,7 +31,7 @@
             android:fontFamily="@font/satoshi"
             android:gravity="center"
             android:text="“Enjoy your life.”"
-            android:textColor="#0d2237"
+            android:textColor="@color/black"
             android:textSize="32sp" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/satoshi"
             android:text="-Elnur Isaev"
-            android:textColor="#0d2237"
+            android:textColor="@color/black"
             android:textSize="24sp" />
 
     </LinearLayout>
