--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/satoshi"
             android:gravity="center"
-            android:textColor="#0d2237"
+            android:textColor="@color/black"
             android:textSize="32sp"
             tools:text="“Enjoy your life.”" />
 
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/satoshi"
-            android:textColor="#0d2237"
+            android:textColor="@color/black"
             android:textSize="24sp"
             tools:text="-Elnur Isaev" />
     </LinearLayout>
