--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -30,14 +30,39 @@
             android:id="@+id/authorTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/satoshi"
             android:textColor="@color/black"
             android:textSize="24sp"
             tools:text="-Elnur Isaev" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/linkIcon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:visibility="gone"
+                android:src="@drawable/telegram_icon"
+                tools:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/linkTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="elnurIsaevBlog"
+                tools:visibility="visible"/>
+
+        </LinearLayout>
     </LinearLayout>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/likeButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -46,7 +71,7 @@
         app:layout_constraintBottom_toTopOf="@+id/shareButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/shareButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
