--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -47,17 +47,17 @@
                 android:id="@+id/linkIcon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:visibility="gone"
                 android:src="@drawable/telegram_icon"
-                tools:visibility="visible"/>
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/linkTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:text="elnurIsaevBlog"
-                tools:visibility="visible"/>
+                android:visibility="gone"
+                tools:visibility="visible" />
 
         </LinearLayout>
     </LinearLayout>
@@ -66,18 +66,37 @@
         android:id="@+id/likeButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/heart"
-        app:layout_constraintBottom_toTopOf="@+id/shareButton"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:padding="4dp"
+        android:src="@drawable/heart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/translateButton" />
 
     <ImageView
         android:id="@+id/shareButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/share"
+        android:layout_marginEnd="24dp"
+        android:padding="4dp"
+        android:src="@drawable/share_icon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/translateButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/translateButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="24dp"
+        android:padding="4dp"
+        android:src="@drawable/translate_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/likeButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/shareButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
