--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,14 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:id="@+id/toolbar"
             android:elevation="4dp"
             android:background="?attr/colorPrimary"
-            app:title="Quotes App" />
+            android:theme="@style/ToolbarColoredBackArrow"
+            app:title="Quotes"
+            app:titleTextColor="@color/white" />
 
         <FrameLayout
             android:id="@+id/main_container"
@@ -40,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:indeterminateTint="@color/mainColor"
                 android:visibility="visible" />
         </FrameLayout>
     </LinearLayout>
@@ -49,8 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="?attr/mainColor"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/nav_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
