--- a/app/src/main/res/layout/appearance_settings_dialog.xml
+++ b/app/src/main/res/layout/appearance_settings_dialog.xml
@@ -5,24 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="?attr/mainColor"
     app:behavior_peekHeight="48dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:paddingBottom="16dp">
 
         <TextView
             android:id="@+id/bottom_sheet_header"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="#033C35"
             android:gravity="center"
             android:text="Appearance settings"
-            android:textColor="@color/white"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +33,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Quote text size"
-            android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +46,8 @@
             android:layout_marginEnd="16dp"
             android:max="24"
             android:progress="8"
+            android:progressTint="?attr/accentColor"
+            android:thumbTint="?attr/accentColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toStartOf="@+id/quoteSizeTextView"
             app:layout_constraintStart_toEndOf="@+id/textView"
@@ -59,7 +59,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="16"
-            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/quoteSizeSeekBar" />
@@ -71,7 +70,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:text="Font"
-            android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +95,6 @@
             android:text="Text color"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -106,7 +103,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/black"
+            android:background="?attr/accentColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -115,8 +112,8 @@
             android:id="@+id/quoteColorIndicator"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/mainColor"
             android:layout_margin="2dp"
+            android:background="@color/mainColor"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
             app:layout_constraintEnd_toEndOf="@id/imageView"
             app:layout_constraintStart_toStartOf="@id/imageView"
