--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="24dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,7 +20,6 @@
             android:id="@+id/quoteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/satoshi"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="32sp"
@@ -31,7 +30,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/satoshi"
             android:textColor="@color/black"
             android:textSize="24sp"
             tools:text="-Elnur Isaev" />
@@ -66,7 +64,7 @@
         android:id="@+id/likeButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:padding="4dp"
+        android:padding="2dp"
         android:src="@drawable/heart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,8 +89,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="24dp"
-        android:padding="4dp"
-        android:src="@drawable/translate_icon"
+        android:padding="2dp"
+        android:src="@drawable/translation_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/likeButton"
         app:layout_constraintHorizontal_bias="0.5"
